Fix .htaccess fonts not loading on prod Add summary of assets, income, liabilities on applicant card Fix disabled styles not showing on final submit button Add styles for applicant card finances summary
Font stack: update font-stack to be more cross-OS.  Better compatibility with Mac OS

--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -96,6 +96,9 @@ $material-box
 	margin 3em 0
 	background rgb(255, 136, 0)
 	padding 1em
-	transition 1s background $transitionFunction
+	transition $transitionTime background $transitionFunction
 	color white
 	box-shadow 0 0.1em 0.2em 0 rgba(0,0,0,0.12), 0 0.1em 0.3em 0 rgba(0,0,0,0.26)
+.info
+	@extend $normal-padding
+	font-weight bold
