--- a/app/styles/components/buttons.styl
+++ b/app/styles/components/buttons.styl
@@ -53,7 +53,7 @@ $button
 	outline none
 	text-transform uppercase
 	border-radius $buttonBorderRadius
-	transition box-shadow 0.4s cubic-bezier(0.25, 0.8, 0.25, 1), background-color 0.4s cubic-bezier(0.25, 0.8, 0.25, 1), transform 0.4s cubic-bezier(0.25, 0.8, 0.25, 1)
+	transition box-shadow 0.4s cubic-bezier(0.25, 0.8, 0.25, 1), background 0.4s cubic-bezier(0.25, 0.8, 0.25, 1), transform 0.4s cubic-bezier(0.25, 0.8, 0.25, 1)
 $disabled
 	opacity 0.5
 	cursor not-allowed
